@@ -1,6 +1,7 @@
 * 2005-06-16 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Provide fit outExpr setting, giving output expression as text
 	- Fix error symmetrising for asymmetric errors
+	- Better button behaviour for editing text popup
 	
 * 2005-06-13 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix multi-window problem on opening files
